--- a/rules.html
+++ b/rules.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Official Rules – PoolKings</title>
-    <link rel="stylesheet" href="style.css" />
+
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
 
+<!-- HEADER -->
 <header class="site-header">
     <div class="header-left">
         <div class="logo">
@@ -20,22 +22,63 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="pools-list.html">Pools</a>
-        <a href="my-picks.html">My Picks</a>
+        <a href="mypicks.html">My Picks</a>
         <a href="leaderboard.html">Leaderboard</a>
         <a href="rules.html" class="active">Official Rules</a>
         <a href="signup.html">Sign Up</a>
     </nav>
 </header>
 
+<!-- MAIN CONTENT -->
 <div class="main-content">
 
     <h1>Official Rules</h1>
-    <p>All PoolKings contests are free to enter and based entirely on skill. No purchase is required.</p>
 
-    <p>Full rules and eligibility requirements will be listed here.</p>
+    <p>
+        These are the official rules governing participation in PoolKings free,
+        skill‑based sports prediction pools.
+    </p>
+
+    <h2>Eligibility</h2>
+    <p>
+        Participation is open to individuals who meet all applicable legal requirements
+        in their jurisdiction. Users must comply with all platform rules and guidelines.
+    </p>
+
+    <h2>How Pools Work</h2>
+    <p>
+        Each pool consists of a set of games or matchups. Users submit predictions
+        before the posted deadline. Late submissions are not accepted.
+    </p>
+
+    <h2>Scoring</h2>
+    <ul>
+        <li>Correct pick: 1 point</li>
+        <li>Incorrect pick: 0 points</li>
+        <li>Highest total points wins the pool</li>
+    </ul>
+
+    <h2>Tiebreakers</h2>
+    <p>
+        If two or more participants finish with the same score, predefined tiebreakers
+        may be applied depending on the pool format.
+    </p>
+
+    <h2>Fair Play</h2>
+    <p>
+        Collusion, cheating, or manipulation of outcomes is strictly prohibited.
+        Violations may result in account suspension or removal from the platform.
+    </p>
+
+    <h2>Technical Issues</h2>
+    <p>
+        PoolKings is not responsible for technical problems, data delays, or
+        third‑party data inaccuracies.
+    </p>
 
 </div>
 
+<!-- FOOTER -->
 <footer class="site-footer">
     <a href="terms.html">Terms</a> •
     <a href="privacy.html">Privacy</a> •
