--- a/terms.html
+++ b/terms.html
@@ -1,99 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Terms of Use | PoolKings</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Terms & Conditions – PoolKings</title>
+
+    <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
 
+<!-- HEADER -->
 <header class="site-header">
-  <div class="logo">👑 POOLKINGS</div>
-  <nav class="main-nav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="pools-list.html">Pools</a>
-    <a href="mypicks.html">My Picks</a>
-    <a href="leaderboard.html">Leaderboard</a>
-    <a href="rules.html">Official Rules</a>
-    <a href="#" id="signup-btn" class="btn-secondary" style="margin-left:16px;">Sign Up</a>
-  </nav>
+    <div class="header-left">
+        <div class="logo">
+            POOLKIN<span class="crown">👑</span>GS
+        </div>
+    </div>
+
+    <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="pools-list.html">Pools</a>
+        <a href="mypicks.html">My Picks</a>
+        <a href="leaderboard.html">Leaderboard</a>
+        <a href="rules.html">Official Rules</a>
+        <a href="signup.html">Sign Up</a>
+    </nav>
 </header>
 
+<!-- MAIN CONTENT -->
+<div class="main-content">
 
-<main class="main-content legal-page">
-  <h1>Terms of Use</h1>
-  <p>These Terms of Use (“Terms”) govern your access to and use of PoolKings. By using the site, you agree to these Terms. If you do not agree, do not use the platform.</p>
+    <h1>Terms & Conditions</h1>
 
-  <h2>1. Eligibility</h2>
-  <ul>
-    <li>You must be at least 18 years old.</li>
-    <li>You must reside in a jurisdiction where skill-based contests are legal.</li>
-    <li>Employees of PoolKings and its affiliates may be restricted from entering certain contests.</li>
-  </ul>
+    <p>
+        By accessing or using PoolKings, you agree to comply with these Terms & Conditions.
+        Please read them carefully before participating in any pools or using the platform.
+    </p>
 
-  <h2>2. Account Responsibilities</h2>
-  <ul>
-    <li>You agree to provide accurate information.</li>
-    <li>You are responsible for maintaining the confidentiality of your account.</li>
-    <li>You must notify us of any unauthorized access.</li>
-  </ul>
+    <h2>Use of the Platform</h2>
+    <p>
+        PoolKings is a free, skill‑based sports prediction platform. Users must follow all
+        applicable laws and platform rules. Misuse of the platform may result in account
+        suspension or removal.
+    </p>
 
-  <h2>3. Use of the Platform</h2>
-  <p>You agree not to:</p>
-  <ul>
-    <li>Manipulate contest outcomes</li>
-    <li>Use bots, scripts, or automated tools</li>
-    <li>Interfere with site operations</th>
-    <li>Upload harmful code or attempt to breach security</li>
-  </ul>
+    <h2>User Responsibilities</h2>
+    <ul>
+        <li>Provide accurate registration information</li>
+        <li>Maintain the confidentiality of your account</li>
+        <li>Submit picks before posted deadlines</li>
+        <li>Refrain from cheating, collusion, or manipulation</li>
+    </ul>
 
-  <h2>4. Contest Nature</h2>
-  <p>All PoolKings contests are free, skill-based prediction pools. No purchase is necessary to enter or win.</p>
+    <h2>Limitation of Liability</h2>
+    <p>
+        PoolKings is provided “as is” without warranties of any kind. We are not responsible
+        for technical issues, data delays, or inaccuracies from third‑party data providers.
+    </p>
 
-  <h2>5. Intellectual Property</h2>
-  <p>All content, branding, and code are owned by PoolKings or its licensors. You may not reproduce or distribute content without permission.</p>
+    <h2>Changes to Terms</h2>
+    <p>
+        PoolKings may update these Terms & Conditions at any time. Continued use of the
+        platform constitutes acceptance of the updated terms.
+    </p>
 
-  <h2>6. Disclaimers</h2>
-  <p>The platform is provided “as is” without warranties of any kind. We do not guarantee uninterrupted access, error-free operation, or accuracy of data.</p>
-
-  <h2>7. Limitation of Liability</h2>
-  <p>To the fullest extent permitted by law, PoolKings is not liable for:</p>
-  <ul>
-    <li>Loss of data</li>
-    <li>Service interruptions</li>
-    <li>Errors in scoring or contest results</li>
-    <li>Indirect, incidental, or consequential damages</li>
-  </ul>
-
-  <h2>8. Termination</h2>
-  <p>We may suspend or terminate accounts for violations of these Terms or suspicious activity.</p>
-
-  <h2>9. Governing Law</h2>
-  <p>These Terms are governed by the laws of Ontario, Canada.</p>
-
-  <h2>10. Changes to Terms</h2>
-  <p>We may update these Terms at any time. Continued use of the platform constitutes acceptance of the updated Terms.</p>
-</main>
-
-<footer class="site-footer">
-  <a href="privacy.html">Privacy</a> ·
-  <a href="terms.html">Terms</a> ·
-  <a href="rules.html">Official Rules</a> ·
-  <a href="advertise.html">Advertise</a>
-</footer>
-
-<div id="signup-modal" class="modal hidden">
-  <div class="modal-content">
-    <h2>Join PoolKings</h2>
-    <p>Enter your email to save picks and join pools.</p>
-    <input type="email" id="signup-email" placeholder="you@example.com">
-    <button id="signup-submit" class="btn-primary" style="margin-top:12px;">Sign Up</button>
-    <p id="signup-status" style="margin-top:8px; font-size:0.85rem;"></p>
-  </div>
 </div>
 
-<script src="js/main.js"></script>
+<!-- FOOTER -->
+<footer class="site-footer">
+    <a href="terms.html">Terms</a> •
+    <a href="privacy.html">Privacy</a> •
+    <a href="rules.html">Official Rules</a>
+    <br />
+    © 2026 PoolKings. All rights reserved.
+</footer>
+
 </body>
 </html>
 
