--- a/pools.html
+++ b/pools.html
@@ -1,13 +1,68 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pool – PoolKings</title>
+
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/pools.js" defer></script>
+</head>
+
+<body>
+
+<!-- HEADER -->
+<header class="site-header">
+    <div class="header-left">
+        <div class="logo">
+            POOLKIN<span class="crown">👑</span>GS
+        </div>
+    </div>
+
+    <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="pools-list.html" class="active">Pools</a>
+        <a href="mypicks.html">My Picks</a>
+        <a href="leaderboard.html">Leaderboard</a>
+        <a href="rules.html">Official Rules</a>
+        <a href="signup.html">Sign Up</a>
+    </nav>
+</header>
+
+<!-- MAIN CONTENT -->
 <div class="main-content">
 
-    <h1 id="pool-title">Loading pool...</h1>
+    <div class="pool-header-sticky">
+        <div class="pool-header-title">
+            <span class="pool-sport-icon">🏒</span>
+            <span id="pool-title">Loading pool...</span>
+        </div>
+        <div id="pool-meta" class="pool-header-meta"></div>
+    </div>
 
     <div id="pool-card" class="pool-card">
         <!-- JS will inject all game rows here -->
     </div>
 
-    <button id="submit-picks" class="submit-button">
-        Submit Picks
-    </button>
-
 </div>
+
+<!-- STICKY SUBMIT -->
+<button id="submit-picks" class="sticky-submit">
+    Submit Picks
+</button>
+
+<!-- TOAST -->
+<div id="toast" class="toast hidden"></div>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+    <a href="terms.html">Terms</a> •
+    <a href="privacy.html">Privacy</a> •
+    <a href="rules.html">Official Rules</a>
+    <br />
+    © 2026 PoolKings. All rights reserved.
+</footer>
+
+</body>
+</html>
