--- a/pools-list.html
+++ b/pools-list.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About – PoolKings</title>
+    <title>Pools – PoolKings</title>
+
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/pools-list.js" defer></script>
 </head>
 
 <body>
@@ -19,8 +21,8 @@
 
     <nav class="main-nav">
         <a href="index.html">Home</a>
-        <a href="about.html" class="active">About</a>
-        <a href="pools-list.html">Pools</a>
+        <a href="about.html">About</a>
+        <a href="pools-list.html" class="active">Pools</a>
         <a href="mypicks.html">My Picks</a>
         <a href="leaderboard.html">Leaderboard</a>
         <a href="rules.html">Official Rules</a>
@@ -30,19 +32,11 @@
 
 <!-- MAIN CONTENT -->
 <div class="main-content">
+    <h1>Available Pools</h1>
 
-    <h1>About PoolKings</h1>
-
-    <p>
-        PoolKings is a free, skill‑based sports prediction platform designed for fans who want
-        a clean, modern, and competitive experience without the complexity of betting.
-    </p>
-
-    <p>
-        Make picks, join pools, track your performance, and compete with friends across your
-        favorite sports — all for free.
-    </p>
-
+    <div id="pools-list">
+        <!-- JS will inject pool cards here -->
+    </div>
 </div>
 
 <!-- FOOTER -->
