--- a/pools-list.html
+++ b/pools-list.html
@@ -6,7 +6,7 @@
     <title>Pools – PoolKings</title>
 
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/pools-list.js" defer></script>
+    <script src="js/pools-list-v2.js" defer></script>
 </head>
 
 <body>
